feat: extend documentation to other functionalities
